<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/serverIpLayout"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/serverIpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_ip"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="0123456789."
            android:ems="10"
            android:id="@+id/serverIp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/server_ip_value" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/serverIpLayout"
        android:id="@+id/serverPortLayout"
        android:layout_margin="8dp">
        <TextView
            android:id="@+id/serverPortText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_port"
            android:layout_marginLeft="10dp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/serverPort"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/server_port_value" />

    </LinearLayout>
    <Button
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/serverPortLayout"
        android:id="@+id/registerToServerButton" />
    <Button
        android:text="Connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerToServerButton"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/connectToServer" />

    <Button
        android:text="Toggle Voting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/registerToServerButton"
        android:layout_above="@+id/connectToServer"
        android:layout_marginTop="10dp"
        android:id="@+id/toggleVotingButton" />

    <Button
        android:text="View Results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleVotingButton"
        android:layout_toRightOf="@+id/connectToServer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/viewResultsButton" />

    <TextView
        android:id="@+id/votingEnabledText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleVotingButton"
        android:layout_toLeftOf="@+id/connectToServer"
        android:text="@string/votingEnabledMsg"
        android:layout_marginLeft="10dp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/messageReceivedListText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connectToServer"
        android:text="Messages Received"
        android:textStyle="normal|bold"
        android:layout_centerInParent="true"

        />
    <TextView
        android:id="@+id/messageReceivedList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageReceivedListText"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp" />


</RelativeLayout>
